@@ -1,3 +1,8 @@
+2026-02-13  Dirk Eddelbuettel  <edd@debian.org>
+
+	* tests/calendars.R: Add simple tests for calendar objects using NYSE
+	and TSX calendars, and July 1 (Canada Day) and July 4 for comparison
+
 2026-02-11  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/dates.cpp (businessDaysBetween,getHolidays,getBusinessDays):
